<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".anniversary.AnniversaryActivity">

        <TextView
            android:id="@+id/AnniversaryActivityCalendarLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendar"
            android:textColor="@android:color/black" />


        <Spinner
            android:id="@+id/AnniversaryActivityCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/AnniversaryActivityAnniversaryTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/anniversary_type"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/AnniversaryActivityAnniversaryType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/AnniversaryActivityDescriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/AnniversaryActivityDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/AnniversaryActivityDateFromLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date_from"
            android:textColor="@android:color/black" />

        <DatePicker
            android:id="@+id/AnniversaryActivityDateFrom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:calendarViewShown="false"
            android:datePickerMode="calendar"
            android:hapticFeedbackEnabled="false"
            android:scaleX="0.9"
            android:scaleY="0.9" />

        <Button
            android:id="@+id/AnniversaryActivityAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_anniversaries"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>